Add .gitignore from #99 and add apertures PNG
(cherry picked from commit d0a8698573075b3cf909cb917a584f1359c6387d)

--- a/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
+++ b/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "With `photutils`, users can create apertures with the following shapes:\n",
     "\n",
-    "<img src=\"https://dl.boxcloud.com/api/2.0/internal_files/460791262443/versions/487657258443/representations/png_paged_2048x2048/content/1.png?access_token=1!mK2E1OiuUdXBeQpFm1fs2aEIHI4qAiRuDMxlpoH0Ng8FDqBkDzcixwbHAe87KVv5VwoFt4yZRT6Yefdjr_F41vW1n7ORLBDGPcB_4ULHfTLeu7ADmrKwMuqbz3GOf4he8KsIxOKl9z_SuxTmpxp2uGFScMLDUEiUYeEiEgTYkmhCIoVT1OiEkRAzLyUhHIMIscm83ZN8CMgSEZWjxlr3e5fvbAediNGoKR6nJGmCGgj4Daa_ua3RozSw22PbW9uxe8CL79VpVzSnS3pu_7S2pZdqnJYjk-2RyiJ90paTt3Ow8eWR0BAqSfFkWJ69nD8PlNXFiHZf6M3INmMDk9zn4GgUiDIjh1wFU__9rGxy6iGDtjF6JUuGLjT8OqTrTWvf6A3ZE3UzqF12H9Wm_B7LgTE40yQSuBXQGEX88u452kNWoiUsRES4LuS_Rmrw2lxBJd82RW66cO7OYGfSAOyWBjM6l40oqy29cUgfwj2yVdDp2mIL_4Mo9BZLZFN_f8OdxId6VVBEmlK0oKQCEpy-ka0ZjF406_cn0rBu2ABjxIIkihyQ_3zHqs43xdbTj3qFVQ..&box_client_name=box-content-preview&box_client_version=2.8.1\" width=700 alt=\"Examples of circular, elliptical, and rectangular apertures and annuli.\">\n",
+    "<img src=\"apertures.png\" width=700 alt=\"Examples of circular, elliptical, and rectangular apertures and annuli.\">\n",
     "\n",
     "Each of these can be defined either in pixel coordinates or in celestial coordinates (using a WCS transformation).\n",
     "\n",
