Maybe adding a tags will help...?
(cherry picked from commit fe62145c40864dfee1baedb9d64ca17d7ddc8387)

--- a/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
+++ b/notebooks/photutils/03_aperture_photometry/03_aperture_photometry.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "With `photutils`, users can create apertures with the following shapes:\n",
     "\n",
-    "<img src=\"apertures.png\" width=700 alt=\"Examples of circular, elliptical, and rectangular apertures and annuli.\">\n",
+    "<a><img src=\"apertures.png\" width=700 alt=\"Examples of circular, elliptical, and rectangular apertures and annuli.\"></a>\n",
     "\n",
     "Each of these can be defined either in pixel coordinates or in celestial coordinates (using a WCS transformation).\n",
     "\n",
