Update notebook on dark properties of real cameras

--- a/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
+++ b/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dark current on modern CCDs, even relatively inexpensive ones, is very small. In a typical exposure the dark current is likely smaller, maybe much smaller, than the read noise. Despite that it is worth examining some dark frames from your camera. because not all pixels have the same dark current. Some, called hot pixels, have much higher dark current than the rest of the sensor.\n",
+    "The dark current on modern CCDs, even relatively inexpensive ones, is very small. In a typical exposure the dark current is likely smaller, maybe much smaller, than the read noise. Despite that, it is worth examining some dark frames from your camera. because not all pixels have the same dark current. Some, called hot pixels, have much higher dark current than the rest of the sensor. Some sensors have non-astronomical sources of counts whose value are proportional to exposure time, like dark current, but whose origin is notthermal effects.\n",
     "\n",
     "As we did in the [notebook about overscan](01.08-Overscan.ipynb), we will focus on a pair of cameras to illustrate this point and demonstrate how to take similar images with your camera and analyze them."
    ]
@@ -40,6 +40,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Making an image to check for hot pixels\n",
+    "\n",
+    "Measuring the dark current in a camera requires taking images with fairly long exposure time, ideally long enough that the expected counts due to dark current is larger than the expected noise in the image. If that isn't the case then the dark images will be measuring noise, not dark current, as we saw in the [previous section](03.01-Dark-current-The-ideal-case).\n",
+    "\n",
+    "There are two ways to ensure that you are measuring dark current:\n",
+    "\n",
+    "+ Take some long-exposure dark frames. The exposure time should be long enough that the expected dark counts is at least as large as the noise expected in a single image.\n",
+    "+ Take several of these images and combine them to reduce the noise in the result. The noise in the combined image is proportional to $1/\\sqrt{N}$, where $N$ is the number of images that are combined.\n",
+    "\n",
+    "\n",
+    "### What if that isn't possible?\n",
+    "\n",
+    "Do your best. The darks from the Large Format Camera were take as part of a science run in which there was limited time for taking dark frames. The key thing to keep in mind is the lower limit on the dark current you can measure given the read noise and exposure time. \n",
+    "\n",
+    "The darks in Case 2 were taken with a new camera that was not yet mounted on the telescope as part of commissioning the camera. That made taking over 5 hours of dark frames more feasible!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Case 1: Cryogenically cooled  Large Format Camera (LFC) at Palomar\n",
     "\n",
     "The images in this section are from chip 0 of the LFC at the Palomar 200-inch telescope. Technical information about the camera is [here](http://www.astro.caltech.edu/palomar/observer/200inchResources/lfcspecs.html). The technical information says nothing about the expected dark current of this camera. The expectation for cameras cooled by liquid nitrogen is that their dark current is essentially zero.\n",
@@ -49,6 +70,27 @@
     "+ not all of the pixels have negligible dark current, and \n",
     "+ not all of the counts in a dark image are from dark current.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Estimating exposure time and number of frames for measuring dark current\n",
+    "\n",
+    "Unfortunately, the technical information for this camera does not include any information about the expected dark current. For thermoelectrically-cooled cameras the dark current is no more than 0.1 $e^-$/sec/pixel, and for newer camers is more like 0.01$e^-$/sec/pixel. We will assume the smaller dark current here.\n",
+    "\n",
+    "The read noise for this camera is 11$e^-$/pixel, so the exposure time needed to just reach the case where the dark counts is equal to the read noise is \n",
+    "\n",
+    "$$\n",
+    "t_\\text{dark, min} = \\frac{11 e^-/\\text{pixel}}{0.01 e^-/\\text{sec/pixel}} = 1100~\\text{sec}.\n",
+    "$$\n",
+    "\n",
+    "Even that leaves us with an image that dominated by read noise rather than dark current. Combining 100 of those images would reduce the read noise by a factor of 10, which would be ideal.\n",
+    "\n",
+    "Unfortunately, taking over 30 hours of dark images is not feasible.\n",
+    "\n",
+    "Instead, we will work with what we have for this camera: three dark images, each 300 seconds. This places a lower limit on the dark current we can measure -- we will only be able to measure the dark current for fairly \"hot\" pixels -- but it at least gives us some idea of the dark properties of the camera."
    ]
   },
   {
@@ -156,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Making an image to check for hot pixels\n",
+    "## Making an image to check for hot pixels\n",
     "\n",
     "The image below is a combination of 20 dark frames, each a 1000 sec exposure. That exposure time was chosen so that the expected number of dark electrons was at least somewhat larger than the read noise expected in a combination of 20 images. As we saw in the previous notebook, unless that is the case the dark frames will measure read noise instead of dark current.\n",
     "\n",
