Clarify language and plots in discussion of dark current properties

--- a/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
+++ b/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
@@ -86,11 +86,11 @@
     "t_\\text{dark, min} = \\frac{11 e^-/\\text{pixel}}{0.01 e^-/\\text{sec/pixel}} = 1100~\\text{sec}.\n",
     "$$\n",
     "\n",
-    "Even that leaves us with an image that dominated by read noise rather than dark current. Combining 100 of those images would reduce the read noise by a factor of 10, which would be ideal.\n",
+    "Even that leaves us with an image that dominated by read noise rather than dark current. Combining 100 of those images would reduce the read noise by a factor of 10, which would be ideal for precisely measuring the dark current in each pixel. Unfortunately, taking over 30 hours of dark images is not feasible. \n",
     "\n",
-    "Unfortunately, taking over 30 hours of dark images is not feasible.\n",
+    "Instead, we will work with what we have for this camera: three dark images, each 300 seconds. This places a lower limit on the dark current we can measure -- we will only be able to measure the dark current for fairly \"hot\" pixels -- but it at least gives us some idea of the dark properties of the camera.\n",
     "\n",
-    "Instead, we will work with what we have for this camera: three dark images, each 300 seconds. This places a lower limit on the dark current we can measure -- we will only be able to measure the dark current for fairly \"hot\" pixels -- but it at least gives us some idea of the dark properties of the camera."
+    "Another way to phrase this is much more positive: for most of the pixels in the image the dark current simply does not matter because it is completely swamped by the read noise."
    ]
   },
   {
@@ -168,20 +168,27 @@
     "exposure_time = 300\n",
     "dark_current_ln2 = gain * combined_dark_lfc.data / exposure_time\n",
     "\n",
-    "plt.figure(figsize=(20, 10))\n",
-    "hist(dark_current_ln2.flatten(), bins=5000, density=False, alpha=0.5, color='C0',\n",
+    "fig = plt.figure(figsize=(20, 10))\n",
+    "hist(dark_current_ln2.flatten(), bins=500, density=False, alpha=0.5, color='C0',\n",
     "     label='Full sensor');\n",
-    "hist(dark_current_ln2[200:, 200:].flatten(), bins=5000, density=False, alpha=0.5, color='C1',\n",
-    "     label='Sensor glow excluded')\n",
-    "hist(dark_current_ln2[:200, :200].flatten(), bins=5000, density=False, alpha=0.5, color='C9',\n",
-    "     label='Sensor glow region');\n",
+    "hist(dark_current_ln2[200:, 200:].flatten(), bins=500, density=False, alpha=0.5, color='C1',\n",
+    "     label='Sensor, excluding sensor glow region')\n",
+    "hist(dark_current_ln2[:200, :200].flatten(), bins=500, density=False, alpha=0.5, color='C9',\n",
+    "     label='Sensor glow region only');\n",
     "#plt.semilogy()\n",
     "plt.loglog()\n",
     "\n",
     "plt.grid()\n",
+    "noise_limit = 2 * 11/exposure_time/np.sqrt(3)\n",
     "plt.vlines(2 * 11/exposure_time/np.sqrt(3), 0.1, 8e6)\n",
     "plt.ylim(0.1, 8e6)\n",
-    "#plt.xlim(0, .1)\n",
+    "plt.xlim(1e-3, 1e2)\n",
+    "x_min, x_max = plt.xlim()\n",
+    "y_min, y_max = plt.ylim()\n",
+    "noisy_region = plt.Rectangle((x_min, y_min), noise_limit - x_min, y_max - y_min, label='Noise-dominated region',\n",
+    "                             color='gray', alpha=0.2, hatch='/')\n",
+    "ax = plt.gca()\n",
+    "ax.add_patch(noisy_region)\n",
     "plt.legend()\n",
     "plt.xlabel('dark current, electrons per second')\n",
     "plt.ylabel('Number of pixels with that dark current');\n"
@@ -245,16 +252,32 @@
    "outputs": [],
    "source": [
     "gain = 1.5\n",
+    "read_noise = 10.0\n",
     "exposure_time = 1000\n",
+    "\n",
     "dark_current = gain * dark_1000.data / exposure_time\n",
     "\n",
+    "noisy_region = 2 * read_noise / exposure_time / np.sqrt(20)\n",
+    "\n",
     "plt.figure(figsize=(20, 10))\n",
-    "hist(dark_current.flatten(), bins=5000, density=False);\n",
-    "plt.vlines(10/exposure_time/np.sqrt(20), *plt.ylim())\n",
-    "#plt.semilogy()\n",
+    "hist(dark_current.flatten(), bins=5000, density=False, label='Dark current');\n",
+    "\n",
+    "plt.ylim(0.1, 4e7)\n",
+    "plt.vlines(noisy_region, *plt.ylim())\n",
+    "\n",
     "plt.loglog()\n",
     "plt.grid()\n",
-    "#plt.xlim(0, .1)\n",
+    "\n",
+    "\n",
+    "x_min, x_max = plt.xlim()\n",
+    "y_min, y_max = plt.ylim()\n",
+    "noisy_region = plt.Rectangle((x_min, y_min), noisy_region - x_min, y_max - y_min, label='Noise-dominated region',\n",
+    "                             color='gray', alpha=0.2, hatch='/')\n",
+    "ax = plt.gca()\n",
+    "ax.add_patch(noisy_region)\n",
+    "\n",
+    "plt.legend()\n",
+    "\n",
     "plt.xlabel('dark current, electrons per second')\n",
     "plt.ylabel('Number of pixels with that dark current');\n"
    ]
