Break next dark notebook into two notebooks for consistency with other sections

--- a/notebooks/03.05-Calibrate-dark-images.ipynb
+++ b/notebooks/03.05-Calibrate-dark-images.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Subtract bias, if necessary\n"
+    "# Calibrate dark images\n",
+    "\n",
+    "In which we subtract overscan, and remove bias (or not)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 1: Overscan subtracted, bias not removed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 2: Overscan not subtracted, bias is removed"
    ]
   }
  ],
