Dark reduction notebook draft

--- a/notebooks/03.05-Calibrate-dark-images.ipynb
+++ b/notebooks/03.05-Calibrate-dark-images.ipynb
@@ -6,7 +6,23 @@
    "source": [
     "# Calibrate dark images\n",
     "\n",
-    "In which we subtract overscan, and remove bias (or not)"
+    "Dark images, like any other images, need to be calibrated. Depending on the data you have and the choices you have made in reducing your data the steps to reducing your images may include:\n",
+    "\n",
+    "1. Subtracting overscan (only if you decide to subtract ocverscan from all images)\n",
+    "2. Trim the image (if it has overscan, whether you are using the overscan or not)\n",
+    "3. Subtract bias (if you need to scale the calibrated dark frames to a different exposure time)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "from ccdproc import ImageFileCollection\n",
+    "import ccdproc as ccdp"
    ]
   },
   {
@@ -20,7 +36,198 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Take a look at what images you have\n",
+    "\n",
+    "First we gather up some information about the raw images and the reduced images up to this point. These examples have darks stored in a subdirectory of the folder with the rest of the images, so we create an `ImageFileCollection` for each."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex1_path_raw = Path('python_imred_data')\n",
+    "\n",
+    "ex1_images_raw = ImageFileCollection(ex1_path_raw)\n",
+    "ex1_darks_raw = ImageFileCollection(ex1_path_raw / 'darks')\n",
+    "\n",
+    "ex1_path_reduced = Path('reduced')\n",
+    "ex1_images_reduced = ImageFileCollection(ex1_path_reduced)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Raw images, everything except the darks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex1_images_raw.summary['file', 'imagetyp', 'exptime', 'filter']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Raw dark frames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex1_darks_raw.summary['file', 'imagetyp', 'exptime', 'filter']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decide which calibration  steps to take\n",
+    "\n",
+    "This example is, again, one of the chips of the LFC camera at Palomar. In earlier notebooks we have seen that the chip has a useful overscan region (LINK), has little dark current except for some hot pixels and sensor glow in one corner of the chip.\n",
+    "\n",
+    "Looking at the list of non-dark images (i.e. the flat and light images) shows that for each exposure time in the non-dark images there is a set of dark exposures that has a matching, or very close to matching, exposure time.\n",
+    "\n",
+    "To be more explicit, there are flats with exposure times of 7.0 sec and 70.011 sec and darks with exposure time of 7.0 and 70.0 sec. The dark and flat exposure times are close enough that there is no need to scale them.  The two images of an object are each roughly 300 sec, matching the darks with exposure time 300 sec. The very small difference in exposure time, under 0.1 sec, does not need to be compensated for.\n",
+    "\n",
+    "Given this, we will:\n",
+    "\n",
+    "1. Subtract overscan from each of the darks. The useful overscan region is XXX (see LINK).\n",
+    "2. Trim the overscan out of the dark images\n",
+    "\n",
+    "We will *not* subtract bias from these images because we will *not* need to rescale them to a different exposure time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reduced images (so far)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex1_images_reduced.summary['file', 'imagetyp', 'exptime', 'filter']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calibrate the individual dark frames\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ccd, file_name in ex1_darks_raw.ccds(imagetyp='DARK',            # Just get the bias frames\n",
+    "                                         ccd_kwargs={'unit': 'adu'}, # CCDData requires a unit for the image if \n",
+    "                                                                     # it is not in the header\n",
+    "                                         return_fname=True           # Provide the file name too.\n",
+    "                                        ):\n",
+    "    \n",
+    "    save_name, _ = file_name.split('.gz')\n",
+    "    \n",
+    "    # Subtract the overscan\n",
+    "    ccd = ccdp.subtract_overscan(ccd, overscan=ccd[:, 2055:], median=True)\n",
+    "    \n",
+    "    # Trim the overscan\n",
+    "    ccd = ccdp.trim_image(ccd[:, :2048])\n",
+    "    \n",
+    "    # Save the result\n",
+    "    ccd.write(ex1_path_reduced / save_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Example 2: Overscan not subtracted, bias is removed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example2_directory  = Path('2018-07-23')\n",
+    "\n",
+    "example2_images = ImageFileCollection(example2_directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "example2_images.summary[example2_images.summary['imagetyp'] == 'LIGHT']['file', 'exptime', 'filter']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astrowidgets import ImageWidget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iw = ImageWidget()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iw.load_fits(str(example2_directory / 'kelt-16-S001-R001-C003-r.fit'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iw.load_fits('ast366_f18/kelt-16-b-S001-R001-C125-r.fit.gz')"
    ]
   }
  ],
