Add two examples two bias reduction

--- a/notebooks/02.01-Calibrating-bias-images.ipynb
+++ b/notebooks/02.01-Calibrating-bias-images.ipynb
@@ -42,9 +42,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## Decide where to put your calibrated images\n",
+    "## Example 1: With overscan subtraction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ### Decide where to put your calibrated images\n",
     " \n",
-    "Though it is possible to overwrite your raw data with calibrated images that is a bad idea. Here we create a folder called `reduced` that will contain the calibrated data and create it if it doesn't exist."
+    "Though it is possible to overwrite your raw data with calibrated images that is a bad idea. Here we create a folder called `example1-reduced` that will contain the calibrated data and create it if it doesn't exist."
    ]
   },
   {
@@ -53,15 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calibrated_data = Path('.', 'reduced')\n",
+    "calibrated_data = Path('.', 'example1-reduced')\n",
     "calibrated_data.mkdir(exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Example with overscan subtraction"
    ]
   },
   {
@@ -70,7 +70,16 @@
    "source": [
     "### Data for this example\n",
     "\n",
-    "The data for this example can be downloaded from http://www.stsci.edu/~etollerud/python_imred_data.tar"
+    "The data for this example can be downloaded from [http://www.stsci.edu/~etollerud/python_imred_data.tar](http://www.stsci.edu/~etollerud/python_imred_data.tar)\n",
+    "\n",
+    "In what follows, the unpacked data is presumed to be available in the same direction as this notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make an image file collection for the raw data"
    ]
   },
   {
@@ -89,25 +98,6 @@
    "outputs": [],
    "source": [
     "files.summary['file', 'imagetyp', 'filter', 'exptime', 'naxis1', 'naxis2']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p = Path('.')\n",
-    "p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.listdir(files.location)"
    ]
   },
   {
@@ -156,7 +146,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The fits header claims the overscan extends from the 2049th column to the end of the image (this is one-based indexing) and that the part of the image exposed to light extends over all rows and from the first column to the 2048$^{th}$ column (again, this is one-indexed).\n",
+    "The fits header claims the overscan extends from the 2049th column to the end of the image (this is one-based indexing) and that the part of the image exposed to light extends over all rows and from the first column to the 2048$^{th}$ column (again, this is one-indexed)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### FITS *vs* Python indexing\n",
     "\n",
     "There are two differences between FITS and Python in terms of indexing:\n",
     "\n",
@@ -307,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reduced_images = ccdp.ImageFileCollection('reduced')\n",
+    "reduced_images = ccdp.ImageFileCollection(calibrated_data)\n",
     "reduced_images.summary['file', 'imagetyp', 'naxis1', 'naxis2']"
    ]
   },
@@ -315,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Without overscan subtraction"
+    "## Example 2: No overscan subtraction, but trim the images"
    ]
   },
   {
@@ -323,6 +320,189 @@
    "metadata": {},
    "source": [
     "If you are not subtracting overscan then the only manipulation you may need to do is trimming the overscan from the images. If there is no overscan region in your images then even that is unnecessary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ### Decide where to put your calibrated images\n",
+    " \n",
+    "Though it is possible to overwrite your raw data with calibrated images that is a bad idea. Here we create a folder called `example2-reduced` that will contain the calibrated data and create it if it doesn't exist."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calibrated_data = Path('.', 'example2-reduced')\n",
+    "calibrated_data.mkdir(exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data for this example \n",
+    "\n",
+    "The data for this example can be downloaded from XXXX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = ccdp.ImageFileCollection('example-thermo-electric')\n",
+    "files.summary['file', 'imagetyp', 'filter', 'exptime', 'naxis1', 'naxis2']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Determine overscan region\n",
+    "\n",
+    "Please see the discussion of this camera in [the overscan notebook](01.08-Overscan.ipynb#Case-2:-Thermo-electrically-cooled-Apogee-Aspen-CG16M) for a discussion of the overscan region of this camera. The overscan for this camera is not useful but should be trimmed out at this stage.\n",
+    "\n",
+    "These headers have some information in the keywords `BIASSEC` and `TRIMSEC` indicating, in the FITS numbering convention, the overscan region and the science region of the chip."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files.summary['file', 'imagetyp', 'biassec', 'trimsec'][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on this, and the decision not to subtract overscan for this camera, we will only need to trim the overscan region off of the images. See the discussion at [FITS *vs* Python indexing](#FITS-vs-Python-indexing), above, for some details about the difference between FITS and Python indexing. Essentially, to get Python indexes from FITS, reverse the order and subtract one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trim the overscan (one sample image)\n",
+    "\n",
+    "The function `trim_image` from [ccdproc](ccdproc.rtfd.io) removes a portion of the image and updates the image metadata as needed.\n",
+    "\n",
+    "Below we get the first bias image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_biases = files.files_filtered(include_path=True, imagetyp='BIAS')\n",
+    "\n",
+    "first_bias = CCDData.read(raw_biases[0], unit='adu')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There two ways of specifying the region to trim. One is to slice the image in Python; the other is to use the `fits_section` argument to `trim_image`.\n",
+    "\n",
+    "The cell below uses a FITS-style section."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trimmed_bias_fits = ccdp.trim_image(first_bias, fits_section='[1:4096, :]')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below does the same trimming as the one above, but with Python-style slicing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trimmed_bias_python = ccdp.trim_image(first_bias[:, :4096])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.testing.assert_allclose(trimmed_bias_python, trimmed_bias_fits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Processing a folder of bias images\n",
+    "\n",
+    "As in [Example 1](#Example-1:-With-overscan-subtraction), above, we can use the [`ImageFileCollection`](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html) we created  to loop over only the bias images, saving each in the folder `calibrated_data`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ccd, file_name in files.ccds(imagetyp='BIAS',            # Just get the bias frames\n",
+    "                                 return_fname=True           # Provide the file name too.\n",
+    "                                ):\n",
+    "    save_name, _ = file_name.split('.gz')\n",
+    "    \n",
+    "    # Trim the overscan\n",
+    "    ccd = ccdp.trim_image(ccd[:, :4096])\n",
+    "    \n",
+    "    # Save the result\n",
+    "    ccd.write(calibrated_data / save_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 3: No overscan at all\n",
+    "\n",
+    "If there is no overscan then there is, in principle, nothing to be done with the bias frames. It may be convient to copy them to the directory with the rest of your reduced images. The code below does that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calibrated_data = Path('.', 'example3-reduced')\n",
+    "calibrated_data.mkdir(exist_ok=True)\n",
+    "\n",
+    "biases = files.files_filtered(imagetyp='BIAS', include_path=True)\n",
+    "\n",
+    "import shutil\n",
+    "\n",
+    "for bias in biases:\n",
+    "    shutil.copy(bias, calibrated_data)"
    ]
   }
  ],
