--- a/notebooks/02.04-Combine-bias-images-to-make-master.ipynb
+++ b/notebooks/02.04-Combine-bias-images-to-make-master.ipynb
@@ -34,32 +34,7 @@
     "\n",
     "from convenience_functions import show_image\n",
     "\n",
-    "download_base_url = 'http://physics.mnstate.edu/craig/ccd-guide/'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The remained of this notebook assumes the calibrated bias images are in the folder in the cell below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "calibrated_images = Path('reduced')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reduced_images = ccdp.ImageFileCollection(calibrated_images)"
+    "#download_base_url = 'http://physics.mnstate.edu/craig/ccd-guide/'"
    ]
   },
   {
@@ -79,6 +54,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 1: cryogenically-cooled camera"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The remained of this section assumes the calibrated bias images are in the folder `example1-reduced` which is created in the previous notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calibrated_path = Path('example1-reduced')\n",
+    "reduced_images = ccdp.ImageFileCollection(calibrated_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below:\n",
+    "\n",
+    "+ selects the calibrated bias images,\n",
+    "+ combines them using the `combine` function,\n",
+    "+ adds the keyword `COMBINED` to the header so that later calibration steps can easily identify which bias to use, and \n",
+    "+ writes the file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -86,19 +97,23 @@
    "source": [
     "calibrated_biases = reduced_images.files_filtered(imagetyp='bias', include_path=True)\n",
     "\n",
-    "combined_bias = ccdp.combine(calibrated_biases, output_file=calibrated_images / 'combined_bias.fit',\n",
+    "combined_bias = ccdp.combine(calibrated_biases,\n",
     "                             method='average',\n",
     "                             sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
     "                             sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
     "                             mem_limit=350e6\n",
-    "                            )"
+    "                            )\n",
+    "\n",
+    "combined_bias.meta['combined'] = True\n",
+    "\n",
+    "combined_bias.write(calibrated_path / 'combined_bias.fit')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Result\n",
+    "### Result\n",
     "\n",
     "A single calibrated image and the combined image are shown below. There is significant two-dimensional structure in the bias that cannot easily be removed by subtracting only the overscan in the next image reduction steps. It takes little time to acquire bias images and doing so will result in higher quality science images."
    ]
@@ -111,9 +126,83 @@
    "source": [
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(20, 10))\n",
     "\n",
-    "show_image(CCDData.read(calibrated_biases[0]).data[500:1000, 500:1000], cmap='gray', ax=ax1, fig=fig)\n",
+    "show_image(CCDData.read(calibrated_biases[0]).data, cmap='gray', ax=ax1, fig=fig)\n",
     "ax1.set_title('Single calibrated bias')\n",
-    "show_image(combined_bias.data[500:1000, 500:1000], cmap='gray', ax=ax2, fig=fig)\n",
+    "show_image(combined_bias.data, cmap='gray', ax=ax2, fig=fig)\n",
+    "ax2.set_title('{} bias images combined'.format(len(calibrated_biases)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 2: Thermo-electrically cooled camera\n",
+    "\n",
+    "The process for combining the images is exactly the same as in example 1. The only difference is the directory that contains the calibrated bias frames."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calibrated_path = Path('example2-reduced')\n",
+    "reduced_images = ccdp.ImageFileCollection(calibrated_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code below:\n",
+    "\n",
+    "+ selects the calibrated bias images,\n",
+    "+ combines them using the `combine` function,\n",
+    "+ adds the keyword `COMBINED` to the header so that later calibration steps can easily identify which bias to use, and \n",
+    "+ writes the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calibrated_biases = reduced_images.files_filtered(imagetyp='bias', include_path=True)\n",
+    "\n",
+    "combined_bias = ccdp.combine(calibrated_biases,\n",
+    "                             method='average',\n",
+    "                             sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
+    "                             sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
+    "                             mem_limit=350e6\n",
+    "                            )\n",
+    "\n",
+    "combined_bias.meta['combined'] = True\n",
+    "\n",
+    "combined_bias.write(calibrated_path / 'combined_bias.fit')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Result\n",
+    "\n",
+    "The difference between a single calibrated bias image and the combined bias image is miuch clearer in this case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(20, 10))\n",
+    "\n",
+    "show_image(CCDData.read(calibrated_biases[0]).data, cmap='gray', ax=ax1, fig=fig)\n",
+    "ax1.set_title('Single calibrated bias')\n",
+    "show_image(combined_bias.data, cmap='gray', ax=ax2, fig=fig)\n",
     "ax2.set_title('{} bias images combined'.format(len(calibrated_biases)))"
    ]
   }
