Complete draft of dark reduction notebook

--- a/notebooks/03.05-Calibrate-dark-images.ipynb
+++ b/notebooks/03.05-Calibrate-dark-images.ipynb
@@ -21,6 +21,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
+    "from astropy.nddata import CCDData\n",
     "from ccdproc import ImageFileCollection\n",
     "import ccdproc as ccdp"
    ]
@@ -52,7 +53,7 @@
     "ex1_images_raw = ImageFileCollection(ex1_path_raw)\n",
     "ex1_darks_raw = ImageFileCollection(ex1_path_raw / 'darks')\n",
     "\n",
-    "ex1_path_reduced = Path('reduced')\n",
+    "ex1_path_reduced = Path('example1-reduced')\n",
     "ex1_images_reduced = ImageFileCollection(ex1_path_reduced)"
    ]
   },
@@ -112,24 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Reduced images (so far)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ex1_images_reduced.summary['file', 'imagetyp', 'exptime', 'filter']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Calibrate the individual dark frames\n",
-    "\n"
+    "### Calibrate the individual dark frames"
    ]
   },
   {
@@ -160,6 +144,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Reduced images (so far)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex1_images_reduced.summary['file', 'imagetyp', 'exptime', 'filter']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Example 2: Overscan not subtracted, bias is removed"
    ]
   },
@@ -169,20 +169,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "example2_directory  = Path('2018-07-23')\n",
+    "ex2_path_raw = Path('example-thermo-electric')\n",
     "\n",
-    "example2_images = ImageFileCollection(example2_directory)"
+    "ex2_images_raw = ImageFileCollection(ex2_path_raw)\n",
+    "\n",
+    "ex2_path_reduced = Path('example2-reduced')\n",
+    "ex2_images_reduced = ImageFileCollection(ex2_path_reduced)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "example2_images.summary[example2_images.summary['imagetyp'] == 'LIGHT']['file', 'exptime', 'filter']"
+    "We begin by looking at what exposure times we have in this data. "
    ]
   },
   {
@@ -191,7 +190,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astrowidgets import ImageWidget"
+    "ex2_images_raw.summary['file', 'imagetyp', 'exposure'].show_in_notebook()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decide what steps to take next\n",
+    "\n",
+    "In this case the only dark frames have exposure time 90 sec. Though that matches the exposure time of the science images, the flat field images are much shorter exposure time, ranging from 1 sec to 1.21 sec. That type range of exposure is typical when twilights flats are taken. Since these are a much different exposure time than the darks, the dark frames will need to be scaled.\n",
+    "\n",
+    "Recall that for this camera the overcan is not useful and should simply be trimmed off.\n",
+    "\n",
+    "Given this, we will:\n",
+    "\n",
+    "1. Trim the overscan from each of the dark frames.\n",
+    "2. Subtract calibration bias from the dark frames so that we can scale the darks to a different exposure time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calibration the individual dark frames"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we read the combined bias image created in the previous notebook. Though we could do this based on the file name, using a systematic set of header keywords to keep track of which images have been combined is less likely to lead to errors."
    ]
   },
   {
@@ -200,7 +229,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iw = ImageWidget()"
+    "combined_bias = CCDData.read(ex2_images_reduced.files_filtered(imagetyp='bias', \n",
+    "                                                              combined=True, \n",
+    "                                                              include_path=True)[0])"
    ]
   },
   {
@@ -209,25 +240,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iw.load_fits(str(example2_directory / 'kelt-16-S001-R001-C003-r.fit'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iw.load_fits('ast366_f18/kelt-16-b-S001-R001-C125-r.fit.gz')"
+    "for ccd, file_name in ex2_images_raw.ccds(imagetyp='DARK',            # Just get the bias frames\n",
+    "                                          return_fname=True           # Provide the file name too.\n",
+    "                                         ):\n",
+    "    \n",
+    "    save_name, _ = file_name.split('.gz')\n",
+    "    \n",
+    "    # Trim the overscan\n",
+    "    ccd = ccdp.trim_image(ccd[:, :4096])\n",
+    "    \n",
+    "    # Subtract bias\n",
+    "    ccd = ccdp.subtract_bias(ccd, combined_bias)\n",
+    "    # Save the result\n",
+    "    ccd.write(ex2_path_reduced / save_name)"
    ]
   }
  ],
