Update file name and remove unused imports

--- a/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
+++ b/notebooks/03.02-Reality-of-dark-currrent--most-of-your-dark-frame-is-noise-and-not-all-of-the-time-dependent-artifacts-are-dark-current.ipynb
@@ -27,11 +27,9 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "from astropy import units as u\n",
+    "# from astropy import units as u\n",
     "from astropy.nddata import CCDData\n",
     "from astropy.visualization import hist\n",
-    "from astropy.stats import mad_std\n",
-    "from ccdproc import ImageFileCollection, subtract_overscan, trim_image, combine, subtract_bias\n",
     "\n",
     "from convenience_functions import show_image"
    ]
@@ -106,8 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calibrated_images = Path('.') / 'reduced'\n",
-    "combined_dark_lfc = CCDData.read(calibrated_images / 'combined_300s_darks.fits')"
+    "calibrated_images = Path('.')\n",
+    "combined_dark_lfc = CCDData.read(calibrated_images / 'combined_dark_300.000.fits')"
    ]
   },
   {
@@ -344,8 +342,8 @@
     "1. A dark frame only measures dark current if the expected dark counts exceed the read noise of the camera by a factor of a few.\n",
     "2. Take multiple dark frames and combine them to reduce the noise level in the combined image as much as possible.\n",
     "2. Most pixels in a CCD have very low dark current.\n",
-    "3. A consequence of 1 and 2 is that you should almost never scale your dark frames up to a longer exposure time because you will amplify noise instead of eliminating dark current.\n",
-    "3. Identify hot pixels and mask them out or otherwise deal with them.\n"
+    "3. A consequence of 1 and 3 is that you should almost never scale your dark frames up to a longer exposure time because you will amplify noise instead of eliminating dark current, even if you have combined multiple images as in 2.\n",
+    "3. Identify hot pixels and mask them out or otherwise deal with them."
    ]
   }
  ],
